# building-rust-applications-for-aws-graviton

./: Cargo.toml  README.md
infrastructure/cli/: cleanup_infra.sh  create_infra.sh  role-policy.json
infrastructure/cloudformation/: rust-link-shortener.yml
infrastructure/terraform/: dynamo.tf  iam.tf  terraform.tf
src/: database.rs  main.rs  shortener.rs
