[package]
name = "rust-link-shortener"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"]}
nanoid = "0.4.0"
aws-config = "0.55.1"
aws-sdk-dynamodb = "0.26.0"
tokio = { version = "1", features = ["full"]}
